<resources>
    <string name="app_name">GeoMaster</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="please_turn_on_internet_connection_to_continue">Please! Turn on internet to continue</string>
    <string name="ok">Ok</string>
    <string name="unKnow_value">N/A</string>
    <string name="imu">IMU</string>
    <string name="point_codes">Point Code</string>
    <string name="lrf">LRF</string>
    <string name="point_media">Point Media</string>
    <string name="lines">Lines</string>
    <string name="scale_bar">Scale Bar</string>
    <string name="map_opacity">Map Opacity</string>
    <string name="disconnect_value">Disconnect</string>
    <string name="create_project">Create Projects</string>
    <string name="create_configuration">Create Configuration</string>
    <string name="create_config">Add Config</string>
    <string name="nm_project">Project Name</string>
    <string name="op_project">Operator Name (Optional)</string>
    <string name="distance_unit">Distance Unit</string>
    <string name="datum_nm">Datum Name</string>
    <string name="user_name">User Name</string>
    <string name="rem_me">Remember Me</string>
    <string name="user_pass">Password</string>
    <string name="login_btn">Login</string>
    <string name="add_manually">Add Manually</string>
    <string name="zn_datum_type">Datum Type</string>
    <string name="coordinate_system">Coordinate System</string>
    <string name="datum_type">Datum Type</string>
    <string name="calFile">Cal File</string>
    <string name="point_names">Point Names</string>
    <string name="chooseFile">Choose Cal File</string>
    <string name="continent">Continent</string>
    <string name="country">Countries</string>
    <string name="angle_nm">Angle Unit</string>
    <string name="zn_data">Zone Data</string>
    <string name="projection_data">Projection Type</string>
    <string name="zone_projection">Zone Projection</string>
    <string name="projection_data_type">Type</string>
    <string name="elv_ky_data">Elevation</string>
    <string name="geoid_data">Geoid Values</string>
    <string name="hemisphere_data">H</string>
    <string name="zn_hemisphere_data">Hemisphere</string>
    <string name="sbm_btn">Submit</string>
    <string name="create_custom_project">Create Custom Project</string>
    <string name="set_up_anta">Set Up Antenna</string>
    <string name="set_up_conn">Set Up Connections</string>
    <string name="set_up_comm">Set Up Communication</string>
    <string name="set_up_auto">Set Up AutoBase</string>
    <string name="set_up_manny">Set Up ManualBase</string>
    <string name="device_info">Device Info</string>
    <string name="gnss_base_profile">GNSS Base Profile</string>
    <string name="corr_txt">Correction</string>
    <string name="new_corr_source">New Correction Source</string>
    <string name="setup_antenna_source">Setup Antenna Source</string>
    <string name="setup_auto_bs">SetUp AutoBase</string>
    <string name="setup_manual_bs">SetUp ManualBase</string>
    <string name="project_comment_data">Project Comment (Optional)</string>
    <string name="rtk_by_radio">RTK by Radio</string>
    <string name="rtk_by_internet">RTK by Internet</string>
    <string name="rtk_by_wifIn">RTK by WiFi</string>
    <string name="internal_radio_txt">Internal Radio</string>
    <string name="external_radio_txt">External Radio</string>
    <string name="togle_pre_conn">Toggle Previous Connection</string>
    <string name="Measure_point">Measure Point</string>
    <string name="ip_connection">IP</string>
    <string name="measured_height_meter">Measured Height (Meter)</string>
    <string name="power_txt">Power</string>
    <string name="proto_txt">Protocol</string>
    <string name="fegquency_txt">Frequency</string>
    <string name="port_connection">Port</string>
    <string name="project_model">Model</string>
    <string name="mount_point">Mount-Point</string>
    <string name="wift_setup">Wifi Setup</string>
    <string name="radio_comm">Radio Communication</string>
    <string name="ntrip_conn">NTRIP Connection</string>
    <string name="connection_type">Connection Type:</string>
    <string name="bluetooth_device">Bluetooth Device:</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">Connect</string>
    <string name="refreshlist">RefreshList</string>
    <string-array name="business_location_type">
        <!--  <item>Select</item>-->
        <item>Bluetooth</item>
        <item>Serial Port</item>
    </string-array>

    <string name="ssid_conn">SSID</string>
    <string name="ssid_pass_conn">SSID Password</string>
    <string name="select_work_mode">SELECT WORK MODE</string>
    <string name="base">Base</string>
    <string name="rover">Rover</string>
    <string name="static_">STATIC</string>

    <string name="ppk">PPK</string>
    <string name="done">Done</string>
    <string name="get_points">GET POINTS</string>
    <string name="occupation_time">Occupation Time</string>
    <string name="in_sec">In Sec</string>
    <string name="init_time">Initialization Time (s)</string>
    <string name="basic_parameters">Basic Parameters</string>
    <string name="anteena_height">Anteena Height</string>
    <string name="antenna_height">Antenna Height</string>
    <string name="set_up_antenna_height">Set Up Antenna Height</string>
    <string name="correction">Correction</string>
    <string name="set_up_corrections">Set Up Corrections</string>
    <string name="set_up_communication">Set Up Communication</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="profile_name">Profile Name</string>
    <string name="rtk_ppk">RTK+PPK</string>

    <string-array name="OccupationTime">
        <item>Select</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>

    </string-array>


    <string-array name="measure_point">
        <item>Vertical</item>
        <item>Slope</item>
    </string-array>

    <string name="n_new">N :</string>
    <string name="e_new">E :</string>
    <string name="ele_new">Elev :</string>
    <string name="fill_n">Fill :</string>


    <string name="angle">Angle :</string>
    <string name="scale">Scale :</string>
    <string name="h_residuals">H Residuals</string>
    <string name="v_residuals">V Residuals</string>
    <string name="slope_north">Slope North :</string>
    <string name="slope_east">Slope East :</string>


    <string name="pdop">PDOP</string>
    <string name="stop_survey">Stop Survey</string>
    <string name="start_survey">Start Survey</string>

    <string name="antenna">Antenna</string>
    <string name="enter_code_name">Enter Code Name</string>
    <string name="please_select_project_first">Please! Select a Project</string>
    <string name="please_set_up_correction_first">Please! Set up Correction</string>
    <string name="please_set_up_parameters_first">Please!Set up Parameters</string>
    <string name="device_detail_is_empty">Device Detail Empty</string>
    <string name="please_enter_initial_time">Please Enter Initial Time</string>
    <string name="please_enter_occupation_time">Please Enter Occupation Time</string>
    <string name="please_enter_initial_time_greater_than_5_min">Please Enter Initial Time greater than 5 min.</string>
    <string name="radio_rover">Radio_Rover</string>
    <string name="radio_external_rover">External_Radio_Rover</string>
    <string name="radio_external_autobase">External_Radio_AutoBase</string>
    <string name="radio_external_manual_base">External_Radio_ManualBase</string>
    <string name="radio_external">RS232</string>
    <string name="gsm">GSM</string>
    <string name="wifi">WiFi</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="pda">PDA</string>
    <string name="pda_off">PDA_OFF</string>
    <string name="measured_height">Measured Height</string>
    <string name="measure_point">Measure Point</string>
    <string name="enter_measured_height">Enter Measured Height</string>
    <string name="enter_model">Enter Model</string>
    <string name="meter">Meter</string>
    <string name="rtk_via_external_radio">RTK Via Radio External</string>
    <string name="rtk_via_pda">RTK Via PDA</string>
    <string name="mode">Mode</string>
    <string name="RTKbyradio">RTK By Radio</string>
    <string name="rtk_by_wifi">RTK By Wifi</string>
    <string name="rtk_via_radio">RTK Via Radio</string>
    <string name="rtk_via_gsm">RTK Via GSM</string>
    <string name="rtk_via_wifi">RTK Via WiFi</string>
    <string name="rtk_by_pda">RTK By PDA</string>
    <string name="set_up_data_source">Set Up data source</string>
    <string name="SetUpCommunications">Set Up Communication</string>
    <string name="SetUpInternet">Set Up Internet</string>
    <string name="navik300">NAVIK300</string>
    <string name="setuppda">Set Up PDA</string>
    <string name="setupWifi">Set Up Wifi</string>
    <string name="radio">Radio</string>
    <string name="please_set_up_correction">Please!Set up Correction\n</string>
    <string name="referesh_SSID">SSID Referesh</string>
    <string name="get_mount_point">Get Mount Point</string>
    <string name="confirm">Confirm</string>
    <string name="please_fill_all_data">Please fill all data</string>


    <string name="Name">Name</string>
    <string name="Address">Address</string>
    <string name="Url">IP/Url</string>
    <string name="port">Port</string>
    <string name="username">Mount Point</string>
    <string name="password">Password</string>


    <string-array name="antenna_array">
        <item>Vertical</item>
        <item>Slope</item>
    </string-array>

    <string-array name="mode_array_rover">
        <item>RTK</item>
        <item>DGPS</item>
        <item>SBAS</item>
    </string-array>


</resources>